tests/snapshots/reader_test__last_airspace.snap
---
source: tests/reader_test.rs
expression: last_airspace
---
Airspace {
    left: 0.013671745546162128,
    top: 0.8726646304130554,
    right: 0.06952206790447235,
    bottom: 0.8377580642700195,
    style: Unknown,
    class: ClassD,
    extended_type: None,
    min_alt: 3505,
    max_alt: 5944,
    min_alt_style: FlightLevel,
    max_alt_style: FlightLevel,
    time_out: 0,
    start_date: None,
    end_date: None,
    extra_data: 0,
    days_active: DaysActive {
        bits: 0,
    },
    points: [
        Point {
            lat: 0.8726646900177002,
            lon: 0.017453549429774284,
        },
        Point {
            lat: 0.8464844822883606,
            lon: 0.017453549429774284,
        },
        Point {
            lat: 0.8417673110961914,
            lon: 0.013671745546162128,
        },
        Point {
            lat: 0.8417673110961914,
            lon: 0.02379952371120453,
        },
        Point {
            lat: 0.840376079082489,
            lon: 0.02844421938061714,
        },
        Point {
            lat: 0.840376079082489,
            lon: 0.03577931970357895,
        },
        Point {
            lat: 0.8377580642700195,
            lon: 0.043633222579956055,
        },
        Point {
            lat: 0.8377580642700195,
            lon: 0.06952206790447235,
        },
        Point {
            lat: 0.8443853259086609,
            lon: 0.06635653227567673,
        },
        Point {
            lat: 0.8476626873016357,
            lon: 0.06477084010839462,
        },
        Point {
            lat: 0.8557930588722229,
            lon: 0.06079568713903427,
        },
        Point {
            lat: 0.8607381582260132,
            lon: 0.058870695531368256,
        },
        Point {
            lat: 0.8624932169914246,
            lon: 0.058206479996442795,
        },
        Point {
            lat: 0.8668470978736877,
            lon: 0.05648549273610115,
        },
        Point {
            lat: 0.8705218434333801,
            lon: 0.055161863565444946,
        },
        Point {
            lat: 0.8726646900177002,
            lon: 0.05439591407775879,
        },
        Point {
            lat: 0.8726646900177002,
            lon: 0.017453547567129135,
        },
    ],
    name: Some(
        "Paris1",
    ),
    frequency_name: None,
    icao_code: None,
    exception_rules: None,
    notam_remarks: None,
    notam_id: None,
    frequency: None,
    secondary_frequency: None,
    notam_insert_time: None,
}
