tests/snapshots/reader_test__last_item_points.snap
---
source: tests/reader_test.rs
expression: points
---
[
    ParsedPoint {
        lon: 0.01745355,
        lat: 0.8726647,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.01745355,
        lat: 0.8464845,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.013671746,
        lat: 0.8417673,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.023799524,
        lat: 0.8417673,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.02844422,
        lat: 0.8403761,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.03577932,
        lat: 0.8403761,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.043633223,
        lat: 0.83775806,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.06952207,
        lat: 0.83775806,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.06635653,
        lat: 0.8443853,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.06477084,
        lat: 0.8476627,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.060795687,
        lat: 0.85579306,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.058870696,
        lat: 0.86073816,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.05820648,
        lat: 0.8624932,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.056485493,
        lat: 0.8668471,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.055161864,
        lat: 0.87052184,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.054395914,
        lat: 0.8726647,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.017453548,
        lat: 0.8726647,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
]
